@@ -10,7 +10,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.AfterEach;
@@ -728,7 +727,7 @@ class NwisReaderTest
         try ( Stream<TimeSeriesTuple> tupleStream = reader.read( fakeSource ) )
         {
             List<TimeSeries<Double>> actual = tupleStream.map( TimeSeriesTuple::getSingleValuedTimeSeries )
-                                                         .collect( Collectors.toList() );
+                                                         .toList();
 
             Feature featureKey = Feature.of( MessageUtilities.getGeometry( "09165000",
                                                                            "DOLORES RIVER BELOW RICO, CO.",
@@ -834,10 +833,10 @@ class NwisReaderTest
                                                      .minimum( Instant.parse( "2018-01-01T00:00:00Z" ) )
                                                      .maximum( Instant.parse( "2021-01-01T00:00:00Z" ) )
                                                      .build();
-        TimePools referenceTimePools = TimePoolsBuilder.builder()
-                                                       .period( Duration.ofHours( 13 ) )
-                                                       .frequency( Duration.ofHours( 7 ) )
-                                                       .build();
+        Set<TimePools> referenceTimePools = Collections.singleton( TimePoolsBuilder.builder()
+                                                                                   .period( Duration.ofHours( 13 ) )
+                                                                                   .frequency( Duration.ofHours( 7 ) )
+                                                                                   .build() );
         Set<GeometryTuple> geometries = Set.of( GeometryTuple.newBuilder()
                                                              .setLeft( Geometry.newBuilder()
                                                                                .setName( "09165000" ) )
@@ -971,10 +970,10 @@ class NwisReaderTest
                                                      .minimum( earliest )
                                                      .maximum( later )
                                                      .build();
-        TimePools referenceTimePools = TimePoolsBuilder.builder()
-                                                       .period( Duration.ofHours( 13 ) )
-                                                       .frequency( Duration.ofHours( 7 ) )
-                                                       .build();
+        Set<TimePools> referenceTimePools = Collections.singleton( TimePoolsBuilder.builder()
+                                                                                   .period( Duration.ofHours( 13 ) )
+                                                                                   .frequency( Duration.ofHours( 7 ) )
+                                                                                   .build() );
         Set<GeometryTuple> geometries = Set.of( GeometryTuple.newBuilder()
                                                              .setBaseline( Geometry.newBuilder()
                                                                                    .setName( "09165000" ) )
@@ -1102,7 +1101,7 @@ class NwisReaderTest
         try ( Stream<TimeSeriesTuple> tupleStream = reader.read( fakeSource ) )
         {
             List<TimeSeries<Double>> actual = tupleStream.map( TimeSeriesTuple::getSingleValuedTimeSeries )
-                                                         .collect( Collectors.toList() );
+                                                         .toList();
 
             Feature featureKey = Feature.of( MessageUtilities.getGeometry( "16211600",
                                                                            "Makaha Str nr Makaha, Oahu, HI",
